--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 [http]
+interface = "127.0.0.1"
 port = 8080
 
-[[dicomweb.pacs]]
-aet = "ORTHANC"
+[dicom.pacs.ORTHANC]
 address = "127.0.0.1:4242"
