--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,13 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 thiserror = "1.0.50"
 config = { version = "0.13.4", features = ["toml"] }
 anyhow = "1.0.75"
+tokio = { version = "1.34.0", features = ["full"] }
+hyper = { version = "1.0.1", features = ["full"] }
+http-body-util = "0.1"
+hyper-util = { version = "0.1", features = ["full"] }
+axum = {git = "https://github.com/tokio-rs/axum.git", rev = "20862d4"}
+futures = "0.3.29"
+mime = "0.3.17"
 
 [lints.rust]
 unsafe_code = "forbid"
