--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,10 @@ tokio = { version = "1.34.0", features = ["full"] }
 hyper = { version = "1.0.1", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
-axum = {git = "https://github.com/tokio-rs/axum.git", rev = "20862d4"}
+axum = { git = "https://github.com/tokio-rs/axum.git", rev = "20862d4", features = ["tracing", "tower-log"] }
 futures = "0.3.29"
 mime = "0.3.17"
+tower-http = { version = "0.5.0", features = ["trace"] }
 
 [lints.rust]
 unsafe_code = "forbid"
