--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ readme = "README.md"
 dicom = "0.6.3"
 # Serialization
 serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 # Logging
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
@@ -26,10 +27,12 @@ tokio = { version = "1.34.0", features = ["full"] }
 hyper = { version = "1.0.1", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
-axum = { git = "https://github.com/tokio-rs/axum.git", rev = "20862d4", features = ["tracing", "tower-log"] }
+axum = { version = "0.7.1", features = ["tracing", "tower-log", "json"] }
 futures = "0.3.29"
 mime = "0.3.17"
 tower-http = { version = "0.5.0", features = ["trace"] }
+deadpool = "0.10.0"
+async-trait = "0.1.74"
 
 [lints.rust]
 unsafe_code = "forbid"
