--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ axum = { version = "0.7.1", features = ["tracing", "tower-log", "json"] }
 futures = "0.3.29"
 mime = "0.3.17"
 tower-http = { version = "0.5.0", features = ["trace"] }
-deadpool = "0.10.0"
+deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
 async-trait = "0.1.74"
 
 [lints.rust]
