--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ mime = "0.3.17"
 tower-http = { version = "0.5.0", features = ["trace"] }
 deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
 async-trait = "0.1.74"
+rand = "0.8.5"
 
 [lints.rust]
 unsafe_code = "forbid"
