feat: Add Sequential Retrieve Mode

--- a/src/config/defaults.toml
+++ b/src/config/defaults.toml
@@ -26,4 +26,4 @@ notify-aets = []
 # pool = { size = 16, timeout = 10_000 }
 # qido-rs = { timeout = 10_000 }
 # stow-rs = { timeout = 30_000 }
-# wado-rs = { timeout = 30_000 }
+# wado-rs = { timeout = 30_000, mode = "concurrent" }
