--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,7 +2,10 @@ name: Build documentation
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
+    paths:
+      - docs/**
   workflow_dispatch:
 
 permissions:
