chore: prefer container host name

--- a/debug/simple-setup/dicom-rst.yaml
+++ b/debug/simple-setup/dicom-rst.yaml
@@ -16,7 +16,7 @@ server:
       uncompressed: true
 aets:
   - aet: ORTHANC
-    host: host.docker.internal
+    host: orthanc
     port: 4242
     backend: DIMSE
     pool:
