--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dicom-rst"
-version = "0.2.0"
+version = "0.3.0-beta.1"
 description = "A robust DICOMweb server with swappable backend"
 edition = "2021"
 rust-version = "1.74.0"
