--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ uuid = { version = "1.16.0", features = ["v4"] }
 bytes = "1.10.1"
 multer = "3.1.0"
 pin-project = "1.1.10"
+image = { version = "0.25.6", features = ["png", "jpeg", "gif"] }
 # S3 backend
 aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.83.0"
