Make the base path configurable
- Adds the `url` dependency
- New config `server.http.base-path`
  - Defaults to "/"
- Change log entry for server start
  - Follow OpenTelemetry Semantic Conventions
  - Replace wildcard addresses (e.g. `0.0.0.0`) with `127.0.0.1` to quickly visit the URL in a browser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ futures = "0.3.31"
 mime = "0.3.17"
 tower-http = { version = "0.6.6", features = ["trace", "cors", "timeout"] }
 tower = { version = "0.5.2", features = ["limit"] }
+url = "2.5.7"
 async-trait = "0.1.89"
 async-stream = "0.3.6"
 uuid = { version = "1.18.1", features = ["v4"] }
