--- a/src/config/defaults.yaml
+++ b/src/config/defaults.yaml
@@ -9,6 +9,7 @@ server:
     max-upload-size: 50000000
     request-timeout: 60000
     graceful-shutdown: true
+    base-path: /
   dimse:
     - aet: DICOM-RST
       interface: 0.0.0.0
