--- a/.github/workflows/rust-checks.yml
+++ b/.github/workflows/rust-checks.yml
@@ -33,6 +33,12 @@ jobs:
       - name: cargo clippy
         run: cargo clippy --all-targets --all-features --message-format=json | clippy-sarif | tee results.sarif | sarif-fmt
 
+      # Workaround for a bug in clippy-sarif causing it to generate duplicated relatedLocations
+      - name: Deduplicate SARIF relatedLocations
+        run: |
+          jq '(.runs[].results[].relatedLocations) |= unique' results.sarif > results-dedup.sarif
+          mv results-dedup.sarif results.sarif
+
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
         with:
