--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,8 +1,9 @@
 # https://docs.github.com/en/actions/publishing-packages/publishing-docker-images
 name: Create and publish a Docker image
 on:
+  workflow_dispatch:
   push:
-    tags: [ "v*.*.*" ]
+    tags: ["v*.*.*"]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
